# shinka_qa

./: .env.example  .gitignore  ENHANCEMENT_SUMMARY.md  LICENSE  README.md  pyproject.toml  quality_config.yaml  requirements.txt  test_enhanced_mutations.py
.github/workflows/: shinka-quality.yml
ci-templates/: .gitlab-ci.yml  .pre-commit-config.yaml
docs/: COMPLETE_TUTORIAL_GUIDE.md  ShinkaEvolve_Tutorial.md  api_reference.md  getting_started.md  llm_pricing.md  multi_provider_setup.md  mutation_strategies.md  shinka_quality_spec.md
examples/banking_system/: CASE_STUDY.md  EVOLUTION_REPORT.md  EXECUTIVE_PRESENTATION.md  INDEX.md  README.md  account_manager.py  account_manager_buggy.py  evolution_report.html  evolution_results.json  quality_config.yaml  quality_config_demo.yaml  temp_test_evolved.py  test_account_manager_evolved_final.py  test_account_manager_evolved_gen1.py  test_account_manager_evolved_gen2.py  test_account_manager_initial.py
examples/simple_calculator/: README.md  calculator.py  calculator_buggy.py  quality_config.yaml  quality_config_local.yaml  temp_test_evolved.py  test_calculator_initial.py
shinka_qa/: __init__.py
shinka_qa/cli/: __init__.py  main.py
shinka_qa/core/: __init__.py  evaluator.py
shinka_qa/evolution/: __init__.py  island_model.py  meta_scratchpad.py  novelty_filter.py  saturation_detector.py  test_mutator.py  ucb_bandit.py
shinka_qa/llm/: __init__.py  llm_client.py
shinka_qa/utils/: __init__.py  test_runner.py
shinka_qa/visualization/: __init__.py  lineage_tree.py  report_generator.py
tutorials/shinka_evolve/: CHEAT_SHEET.md  README.md
tutorials/shinka_evolve/part00_introduction/: guide.md
tutorials/shinka_evolve/part01_basic_evolution/: guide.md
tutorials/shinka_evolve/part02_island_model/: guide.md
tutorials/shinka_evolve/part03_custom_fitness/: guide.md
tutorials/shinka_evolve/part04_real_problems/: guide.md
tutorials/shinka_qa/: CHEAT_SHEET.md  README.md
tutorials/shinka_qa/part05_ci_cd/: guide.md
(+16 files in other folders)
