[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shinka-qa"
version = "1.0.0"
description = "ソフトウェア品質改善のための進化的フレームワーク"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Shinka Quality Team"}
]
keywords = ["testing", "quality", "evolution", "pytest", "coverage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/Kamigusa/shinka-qa"
Documentation = "https://github.com/Kamigusa/shinka-qa/docs"
Repository = "https://github.com/Kamigusa/shinka-qa"
Issues = "https://github.com/Kamigusa/shinka-qa/issues"

[project.scripts]
shinka-qa = "shinka_quality.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["shinka_quality*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["shinka_quality"]
omit = [
    "*/tests/*",
    "*/examples/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
